[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
# General info
name = "dymoval"
version = "0.2.0"

# Requirements
requires-python = ">=3.9"

# Dependencies
dependencies = [
"numpy",
"scipy",
"pandas",
"matplotlib",
"control",
"typing",
"pathlib",
"tomli",
"pytest",
"flake8",
"mypy",
"black",
"coverage",
"psutil"
]

# Other metadata
authors = [
  { name="Ubaldo Tiberi", email="ubaldo.tiberi@volvo.com" },
]
description = "Dymoval is a Python package for validating models and analyzing datasets."
readme = "README.md"
license = { file="LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
]
keywords = [
  "data-analysis",
  "modeling",
  "model validation",
  "dataset",
  "data"
]
# dynamic = ["version"] This may be useful once I will learn how to deal with versions


# For developers
[project.optional-dependencies]

build = ["hatch"]

docs = [
  "sphinx",
  "furo",
  "sphinx-toolbox",
  "sphinx-autodoc-typehints"
]


[project.urls]
"Homepage" = "https://github.com/VolvoGroup/dymoval"
"Documentation" = "https://volvogroup.github.io/dymoval/"
"Bug Tracker" = "https://github.com/VolvoGroup/dymoval/issues"


# =======================
# Hatch settings
# =======================

[tool.hatch.envs.myenv]
type = "conda"
command = "conda"
conda-forge = true

[tool.hatch.build.targets.sdist]
exclude = [
  "/.github",
  ".flake8"
]

[tool.hatch.build.targets.wheel.force-include]
"scripts" = "dymoval/scripts"

# ===================================
# Formatting, type check, unit-test 
# ===================================
# black
[tool.black]
target-version = ['py39']
line-length = 80
exclude = ["scripts", "docs"]

# mypy
[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
show_error_codes = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
# For now, mypy is only run on ./src
# The following two shall be module specific
ignore_missing_imports = true
disable_error_code = ["name-defined"]

[[tool.mypy.overrides]]
module = [
    "dataset",
    "validation",
    "utils",
    "config",
]


# pytest
[tool.pytest.ini_options]
norecursedirs = ["scripts"] # Exclude folders
markers = [
    "plot: marks SLOW plot tests (deselect with '-m \"not plot\"')",
    "open_tutorial: marks the open_tutorial (which opens VSCode all the times)"

]
